--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
-    "firebase": "^10.10.0",
     "framer-motion": "^11.0.24",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
@@ -35,7 +34,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
